# kcexo

./: .cruft.json  .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  tox.ini
doc/: install_windows.md  intall_linux.md  planner.md  using_comp_finder.md
docs/: conf.py  index.rst  intall_linux.md  intall_linux.rst  intall_windows.md  intall_windows.rst
exec/: conda_kc_comp_stars.bat  v_kc_comp_stars.bat
kcexo/: __init__.py  fov.py  observatory.py  planet.py  star.py  transit.py  version.py
kcexo/_dev/: exposure.perl  pubsub.txt  test_ac.py  test_wit.py
kcexo/assets/comp_stars/: license.txt
kcexo/calc/: __init__.py  exposure.py  orbits.py  star_profile.py  util.py
kcexo/calc/tests/: test_orbit.py
kcexo/constraint/: __init__.py
kcexo/data/: __init__.py  exoclock_data.py  fits.py  fov_stars.py
kcexo/schema/: __init__.py
kcexo/source/: __init__.py  exoclock.py  source.py
kcexo/tests/: __init__.py  fixture_stars_planets.py  test_planet.py  test_star.py  test_transit.py  transit_profile.py
kcexo/tests/data/: horizon2.csv  horizon_alnitak.csv  observatories.yaml  observatory.yaml
kcexo/ui/comp_stars/: about.py  exo_comp_stars.py  filter_control.py  grid_pane.py  main_frame.py  top_pane.py
kcexo/ui/planner/: about.py  exo_planner.py  main_frame.py  panel_mt.py  panel_obs.py  panel_sd.py  panel_st.py  transit_form.py  utils.py
kcexo/ui/widgets/: filter_control.py  license_dialog.py  list_autocompleter.py  mpl_canvas.py  new_event.py  number_validator.py  plot_cell_renderer.py  range_slider.py  sortable_grid.py  sortable_mpl_grid.py  utc_offset_validator.py
kcexo/viz/: __init__.py  render.py  transit.py
licenses/: LICENSE.rst
